	* Added an 'aman-remote' RPM subpackage.
2022-04-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.18rmt0.
2022-04-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in amand(8) that could cause the ping tables to be
	created with the incorrect table engine type.
2022-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a table engine type check to amand(8).
	* Removed stale progress dialog implication from aman(8).
	* Added an 'AMConnection::errorReturned()' signal.
2022-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a modeless progress dialog box to aman(1).
2022-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in aman(1) that caused the 'Make Master' button
	to be enabled for a host when the opposite system was already
	Master.
2022-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'aman_add_remote_replication_user.pl' provisioning script.
	* Added a progress dialog to amanrmt(8).
2022-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default value of the 'MysqlReplicationTimeout'
	directive in the '[Global]' section of aman.conf(5) from
	60000 to 10.
2022-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Modified amanrmt(8) to turn the 'Audio Replicating' light RED
	if no check file is found in the source audio store.
2022-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Updated the e-mail routines to be UTF-8 clean.
2022-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Removed superfluous data structures from amanrmt(8).
2022-04-15 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Sitename=' directive to the '[Global]' section of
	amanrmt.conf(5).
	* Added e-mail alerts when replication status or state changes in
	amanrmt(8).
2022-04-15 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Sitename=' directive to the '[SystemA]' and '[SystemB]'
	sections of aman.conf(5).
2022-04-20 Fred Gleason <fredg@paravelsystems.com>
	* Added code to cleanup stale snapshots to amanrmt(8).