@@ -371,3 +371,6 @@ H	* Fixed a typo in 'conf/aman.conf-sample'.
 	sections of aman.conf(5).
 2022-04-20 Fred Gleason <fredg@paravelsystems.com>
 	* Added code to cleanup stale snapshots to amanrmt(8).
+2022-05-09 Fred Gleason <fredg@paravelsystems.com>
+	* Removed 'docs/mysql_states.gxd' from the RPM package.
+	* Fixed a regression that broke the 'make rpm' target.
